// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/components/atoms/Spinner stories Sample matches markup snapshot 1`] = `
<DocumentFragment>
  <svg
    class="animate-spinfast"
    fill="currentColor"
    height="40"
    role="status"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="40"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 22c5.421 0 10-4.579 10-10h-2c0 4.337-3.663 8-8 8s-8-3.663-8-8c0-4.336 3.663-8 8-8V2C6.579 2 2 6.58 2 12c0 5.421 4.579 10 10 10z"
    />
  </svg>
</DocumentFragment>
`;

exports[`app/components/atoms/Spinner stories Sized matches markup snapshot 1`] = `
<DocumentFragment>
  <svg
    class="animate-spinfast"
    fill="currentColor"
    height="80"
    role="status"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="80"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 22c5.421 0 10-4.579 10-10h-2c0 4.337-3.663 8-8 8s-8-3.663-8-8c0-4.336 3.663-8 8-8V2C6.579 2 2 6.58 2 12c0 5.421 4.579 10 10 10z"
    />
  </svg>
</DocumentFragment>
`;
